added unit tests + integration tests